# highgarden

./: .dockerignore  .gitignore  .prettierignore  CLAUDE.md  change.md  docker-compose.yml  ecosystem.config.cjs  package-lock.json  package.json  plan.md  turbo.json
.github/workflows/: cd.yaml  ci.yaml
.husky/: pre-push
apps/contract/: Anchor.toml  contract.md  package.json  tsconfig.json  upgrade.md
apps/hedger/: .env.example  .eslintrc.cjs  CODEBASE.md  Dockerfile  TRADE_FLOW.md  errors.ts  health.ts  index.ts  init.services.ts  package.json  redis-publisher.ts  redis.ts  tsconfig.json
apps/mirror/: .eslintrc.cjs  Dockerfile  index.ts  package.json  tsconfig.json
apps/polymarket/: .eslintrc.cjs  mock.md  package.json  tsconfig.json
apps/server/: .editorconfig  .env.example  .eslintrc.cjs  Dockerfile  index.ts  package.json  (+1 more)
apps/solana/programs/contract/: Cargo.toml
apps/solana/programs/contract/src/: constants.rs  errors.rs  events.rs  lib.rs
apps/solana/programs/contract/src/instructions/: admin.rs  claim.rs  close_position.rs  close_used_nonce.rs  create_market.rs  initialize_config.rs  mod.rs  place_order.rs  resolve_market.rs
apps/solana/programs/contract/src/state/: config.rs  market.rs  signed_quote.rs  used_nonce.rs  user_position.rs
apps/solana/programs/contract/src/utils/: account.rs  discriminator.rs  ed25519.rs  mod.rs
data/: brainstorming.md  build-log.md  hedge-first-plan.md  hedger-plan.md  noob.md  steps.md  system.md  use-case.md
scripts/: build-all-images.sh  smoke-test-images.sh  strip-dev-deps.sh  symlink-env.sh
(+477 files in other folders)
