[package]
name = "solmarket-contract"
version = "0.1.0"
description = "SolMarket native Solana program (no Anchor, no Pinocchio)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmarket_contract"

[features]
default = []
no-entrypoint = []

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
solana-program = "2.3"
spl-token = { version = "7.0", features = ["no-entrypoint"] }
thiserror = "1.0"
